crates/weft-snapshots/tests/snapshots/a2ui/corpus-profile.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-profile as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "profile",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "profile",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "avatar",
            "name",
            "bio",
            "links-title",
            "links",
            "edit"
          ],
          "accessibility": {
            "label": "Profile"
          }
        },
        {
          "id": "avatar",
          "component": "Image",
          "url": {
            "path": "/user/avatar"
          },
          "description": "Profile photo"
        },
        {
          "id": "name",
          "component": "Text",
          "text": {
            "path": "/user/name"
          },
          "variant": "h1"
        },
        {
          "id": "bio",
          "component": "Text",
          "text": {
            "path": "/user/bio"
          }
        },
        {
          "id": "links-title",
          "component": "Text",
          "text": "Links",
          "variant": "h2"
        },
        {
          "id": "links",
          "component": "Row",
          "children": [
            "website",
            "github"
          ]
        },
        {
          "id": "website",
          "component": "Button",
          "child": "website-label",
          "variant": "borderless",
          "action": {
            "event": {
              "name": "website"
            }
          }
        },
        {
          "id": "website-label",
          "component": "Text",
          "text": "Website"
        },
        {
          "id": "github",
          "component": "Button",
          "child": "github-label",
          "variant": "borderless",
          "action": {
            "event": {
              "name": "github"
            }
          }
        },
        {
          "id": "github-label",
          "component": "Text",
          "text": "GitHub"
        },
        {
          "id": "edit",
          "component": "Button",
          "child": "edit-label",
          "variant": "default",
          "action": {
            "event": {
              "name": "profile.edit"
            }
          }
        },
        {
          "id": "edit-label",
          "component": "Text",
          "text": "Edit profile"
        }
      ]
    }
  }
]
