crates/weft-snapshots/tests/snapshots/a2ui/corpus-search-results.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-search-results as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "search",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "search",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "form",
            "results",
            "empty"
          ],
          "accessibility": {
            "label": "Search"
          }
        },
        {
          "id": "form",
          "component": "Column",
          "children": [
            "bar"
          ]
        },
        {
          "id": "bar",
          "component": "Row",
          "children": [
            "query",
            "go"
          ]
        },
        {
          "id": "query",
          "component": "TextField",
          "label": "Search",
          "variant": "shortText",
          "value": {
            "path": "/query"
          }
        },
        {
          "id": "go",
          "component": "Button",
          "child": "go-label",
          "variant": "primary",
          "action": {
            "event": {
              "name": "search.run"
            }
          }
        },
        {
          "id": "go-label",
          "component": "Text",
          "text": "Search"
        },
        {
          "id": "results",
          "component": "List",
          "children": {
            "componentId": "column",
            "path": "/results"
          }
        },
        {
          "id": "empty",
          "component": "Text",
          "text": "No results found"
        },
        {
          "id": "result-title",
          "component": "Text",
          "text": {
            "path": "title"
          },
          "variant": "h3"
        },
        {
          "id": "result-snippet",
          "component": "Text",
          "text": {
            "path": "snippet"
          }
        },
        {
          "id": "result-open",
          "component": "Button",
          "child": "result-open-label",
          "variant": "borderless",
          "action": {
            "event": {
              "name": "results.open"
            }
          }
        },
        {
          "id": "result-open-label",
          "component": "Text",
          "text": "Open"
        },
        {
          "id": "column",
          "component": "Column",
          "children": [
            "result-title",
            "result-snippet",
            "result-open"
          ]
        }
      ]
    }
  }
]
