crates/weft-snapshots/tests/snapshots/a2ui/corpus-settings.snap
---
source: crates/weft-snapshots/tests/interop.rs
description: corpus-settings as a2ui
---
[
  {
    "version": "v0.9",
    "createSurface": {
      "surfaceId": "settings",
      "catalogId": "https://a2ui.org/specification/v0_9/catalogs/basic/catalog.json"
    }
  },
  {
    "version": "v0.9",
    "updateComponents": {
      "surfaceId": "settings",
      "components": [
        {
          "id": "root",
          "component": "Column",
          "children": [
            "title",
            "notifications",
            "appearance",
            "save"
          ],
          "accessibility": {
            "label": "Settings"
          }
        },
        {
          "id": "title",
          "component": "Text",
          "text": "Settings",
          "variant": "h1"
        },
        {
          "id": "notifications",
          "component": "Card",
          "child": "column",
          "accessibility": {
            "label": "Notifications"
          }
        },
        {
          "id": "notifications-title",
          "component": "Text",
          "text": "Notifications",
          "variant": "h2"
        },
        {
          "id": "email-alerts",
          "component": "CheckBox",
          "label": "Email alerts",
          "value": {
            "path": "/emailAlerts"
          }
        },
        {
          "id": "push-alerts",
          "component": "CheckBox",
          "label": "Push notifications",
          "value": {
            "path": "/pushAlerts"
          }
        },
        {
          "id": "column",
          "component": "Column",
          "children": [
            "notifications-title",
            "email-alerts",
            "push-alerts"
          ]
        },
        {
          "id": "appearance",
          "component": "Card",
          "child": "column-2",
          "accessibility": {
            "label": "Appearance"
          }
        },
        {
          "id": "appearance-title",
          "component": "Text",
          "text": "Appearance",
          "variant": "h2"
        },
        {
          "id": "language",
          "component": "ChoicePicker",
          "variant": "mutuallyExclusive",
          "options": [
            {
              "label": "English",
              "value": "en"
            },
            {
              "label": "Deutsch",
              "value": "de"
            },
            {
              "label": "Français",
              "value": "fr"
            }
          ],
          "value": {
            "path": "/language"
          },
          "label": "Language",
          "filterable": true
        },
        {
          "id": "dark-mode",
          "component": "CheckBox",
          "label": "Dark mode",
          "value": {
            "path": "/darkMode"
          }
        },
        {
          "id": "column-2",
          "component": "Column",
          "children": [
            "appearance-title",
            "language",
            "dark-mode"
          ]
        },
        {
          "id": "save",
          "component": "Button",
          "child": "save-label",
          "variant": "primary",
          "action": {
            "event": {
              "name": "settings.save"
            }
          },
          "checks": [
            {
              "condition": {
                "call": "required",
                "args": {
                  "value": {
                    "path": "/dirty"
                  }
                }
              },
              "message": "Not available"
            }
          ]
        },
        {
          "id": "save-label",
          "component": "Text",
          "text": "Save changes"
        }
      ]
    }
  }
]
